fix image widths on mobile

--- a/css/billy.css
+++ b/css/billy.css
@@ -72,3 +72,7 @@ ul.contact i {
   font-size: 1.6em;
   width: 200px;
 }
+.container img, .container iframe  {
+    max-width: 100%;
+    max-height: 100%;        
+}
